--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="testimonials.html">Testimonials</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
   </nav>
@@ -46,7 +46,7 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="img/mountains.png">
+        <img class="me"src="img/snowcrab.jpg">
         <div class="carousel-caption">
           <h1>get to know bootstrap</h1>
           <br>
@@ -55,10 +55,10 @@
       </div>
       <!--- End active--->
       <div class="item">
-<img src="img/snow.png">
+<img class="king" src="img/king3.jpg">
 </div>
 <div class="item">
-  <img src="img/red.png">
+  <img src="img/blove.jpg">
 </div>
 </div>
 <!---Start Slide Controls-->
@@ -80,7 +80,7 @@
       <h4>HTMLS</h4>
     </div>
     <div class="col-sm-4">
-      <img src="img/bootstrap.png" id="icon">
+      <img src="img/crab7.jpg" id="icon">
       <h4>Bootstrap</h4>
     </div>
     <div class="col-sm-4">
@@ -103,7 +103,7 @@
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="col-md-6">
-      <img src="img/bootstrap2.jpg" class="img-responsive">
+      <img src="img/crab6.jpg" class="img-responsive">
     </div>
     </div>
     </div>
